fixed vertical alignment

--- a/interactive-rating-component-main/css/style.css
+++ b/interactive-rating-component-main/css/style.css
@@ -141,6 +141,13 @@ button {
 
 @media screen and (min-width: 600px) {
 
+    body {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        padding: 0;
+    }
+
     main {
         width: 360px;
         margin: auto;
